actualizacion de create.HTML

--- a/src/templates/clientes/create.html
+++ b/src/templates/clientes/create.html
@@ -30,15 +30,15 @@
                     </div>
                     <div class="form-group">
                         <label for="txtfotoP" class="small">Foto de PASAPORTE: </label>
-                        <input type="file" class="form-control-file small" name="txtfotoP" id="txtfotoP" required>
+                        <input type="file" class="form-control-file small" name="txtfotoP" id="txtfotoP" >
                     </div>
                     <div class="form-group">
                         <label for="txtfotoV" class="small">Foto de VISA: </label>
-                        <input type="file" class="form-control-file small" name="txtfotoV" id="txtfotoV" required>
+                        <input type="file" class="form-control-file small" name="txtfotoV" id="txtfotoV" >
                     </div>
                     <div class="form-group">
                         <label for="txtfotoD" class="small">Foto de DNI: </label>
-                        <input type="file" class="form-control-file small" name="txtfotoD" id="txtfotoD" required>
+                        <input type="file" class="form-control-file small" name="txtfotoD" id="txtfotoD" >
                     </div>
                     <button type="submit" class="btn btn-secondary btn-sm btn-block">Agregar Cliente</button>
                 </form>
