--- a/src/templates/clientes/cliente.html
+++ b/src/templates/clientes/cliente.html
@@ -39,12 +39,26 @@
             <h2>Documentos del Pasajero</h2>
         </div>
         <div class="image-container">
-            <p><strong>Foto PASAPORTE: </strong></p>
-            <img src="{{ url_for('uploads', filename=cliente[3]) }}" alt="pasaporte">
-            <p><strong>Foto VISA: </strong></p>
-            <img src="{{ url_for('uploads', filename=cliente[4]) }}" alt="visa">
-            <p><strong>Foto DNI: </strong></p>
-            <img src="{{ url_for('uploads', filename=cliente[5]) }}" alt="dni">
+            {% if cliente[3] %}
+                <p><strong>Foto PASAPORTE: </strong></p>
+                <img src="{{ url_for('uploads', filename=cliente[3]) }}" alt="pasaporte">
+            {% else %}
+                <p><strong>Foto PASAPORTE: </strong>No disponible</p>
+            {% endif %}
+            
+            {% if cliente[4] %}
+                <p><strong>Foto VISA: </strong></p>
+                <img src="{{ url_for('uploads', filename=cliente[4]) }}" alt="visa">
+            {% else %}
+                <p><strong>Foto VISA: </strong>No disponible</p>
+            {% endif %}
+            
+            {% if cliente[5] %}
+                <p><strong>Foto DNI: </strong></p>
+                <img src="{{ url_for('uploads', filename=cliente[5]) }}" alt="dni">
+            {% else %}
+                <p><strong>Foto DNI: </strong>No disponible</p>
+            {% endif %}
         </div>
         <div class="btn-container">
             <a href="/clientes" class="btn btn-secondary mb-3">Atras</a>
