--- a/src/templates/clientes/index.html
+++ b/src/templates/clientes/index.html
@@ -25,7 +25,7 @@
     {% include 'header.html' %}
     <div class="container">
         <img width="300px" src="{{ url_for('static', filename='logo-final-02.png') }}" alt="Logo de la Empresa" class="logo">
-        <div class="d-flex flex-row">
+        <div class="d-flex flex-row justify-content-center">
             <button class="btn btn-secondary btn-custom" onclick="window.location.href='/create/'">Alta de Pasajero</button>
             <button class="btn btn-secondary btn-custom" onclick="window.location.href='/clientes/'">Buscar Pasajero</button>
             <button class="btn btn-secondary btn-custom" onclick="window.location.href='/clientes/'">Pasajeros</button>
